# ECGRID

./: .gitignore  CMakeLists.txt  README.md
lib/: fftpack5.f90
src/core/: ecgrid_mod.F90  ke_mod.F90  mesh_mod.F90  operators_mod.F90  pv_mod.F90  state_mod.F90  static_mod.F90  tend_mod.F90
src/drivers/: ecgrid_swm_driver.F90
src/tests/swm/: cross_pole_flow_test_mod.F90  jet_zonal_flow_test_mod.F90  mountain_zonal_flow_test_mod.F90  steady_geostrophic_flow_test_mod.F90
src/utils/: allocator_mod.F90  const_mod.F90  debug_mod.F90  history_mod.F90  namelist_mod.F90  parallel_mod.F90  time_mod.F90
